@@ -96,6 +96,7 @@
                                 --add-opens=javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
                                 --add-opens=javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
                                 --add-opens=javafx.base/com.sun.javafx.logging=ALL-UNNAMED
+                                --add-opens=javafx.graphics/com.sun.glass.ui.monocle=ALL-UNNAMED
                                 -Dtestfx.robot=glass
                                 -Dtestfx.headless=true
                                 -Dglass.platform=Monocle
